# tauri-plugin-android-utils

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: AndroidUtils.kt
android/src/test/java/: ExampleUnitTest.kt
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: makeToast.toml
permissions/schemas/: schema.json
src/: lib.rs
src/api/: mod.rs  path.rs  toast.rs
