[package]
name = "tauri-plugin-android-utils"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-android-utils"

[dependencies]
tauri = { version = "2.0.0-beta.22" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.17", features = ["build"] }
tauri-build = "2.0.0-beta.17"
