[package]
name = "tauri-plugin-android-utils"
version = "0.0.1"
authors = [ "shadow3aaa@github" ]
description = "Some utils for android"
edition = "2021"
links = "tauri-plugin-android-utils"

[dependencies]
tauri = { version = "2.0.0-beta" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta", features = ["build"] }
tauri-build = "2.0.0-beta"
